--- a/app/src/main/res/layout/activity_own_user_profile_layout.xml
+++ b/app/src/main/res/layout/activity_own_user_profile_layout.xml
@@ -411,7 +411,8 @@
                             android:layout_marginLeft="@dimen/small_margin"
                             android:layout_marginRight="@dimen/small_margin"
                             android:scrollbars="vertical"
-                            android:visibility="visible"/>
+                            android:visibility="visible"
+                            android:clickable="true"/>
 
 
                     </android.support.v7.widget.CardView>
