--- a/app/src/main/res/layout/profile_details_child_item.xml
+++ b/app/src/main/res/layout/profile_details_child_item.xml
@@ -38,7 +38,8 @@
             android:text="সামান্য শারীরিক প্রতিবন্ধকতা(asdadadad ada dasd adad)"
             android:textColor="#00011F"
             android:textSize="@dimen/item_textsize"
-            android:textStyle="normal"/>
+            android:textStyle="normal"
+            android:imeOptions="actionDone"/>
         <ImageView
             android:id="@+id/img_edit"
             android:layout_width="20dp"
