--- a/app/src/main/res/layout/brother_edit.xml
+++ b/app/src/main/res/layout/brother_edit.xml
@@ -84,7 +84,8 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:gravity="right"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
                     <ImageView
                         android:layout_width="20dp"
@@ -105,10 +106,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@color/white"
-                android:hint="  নাম*"
+                android:hint="নাম*"
                 android:imeOptions="actionNext"
                 android:padding="10dp"
                 android:singleLine="true"
@@ -119,7 +120,7 @@
                 android:id="@+id/age_brother"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="0dp"
                 android:background="@color/white"
@@ -131,7 +132,7 @@
                     android:id="@+id/age_text_view_brother"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:gravity="left"
@@ -156,7 +157,7 @@
                 android:id="@+id/professonal_status_brother"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:background="@color/white"
@@ -167,7 +168,7 @@
                     android:id="@+id/profession_text_view_brother"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:gravity="left"
@@ -192,7 +193,7 @@
                 android:id="@+id/professonal_group_status_brother"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:background="@color/white"
@@ -203,7 +204,7 @@
                     android:id="@+id/profession_group_text_view_brother"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:gravity="left"
@@ -228,7 +229,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:background="@color/white"
@@ -243,7 +244,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@color/white"
                 android:hint="প্রতিষ্ঠান"
@@ -257,9 +258,8 @@
                 android:id="@+id/marital_status_brother"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
                 android:background="@color/white"
                 android:orientation="horizontal"
                 android:weightSum="2">
@@ -268,7 +268,7 @@
                     android:id="@+id/marital_text_view_brother"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:gravity="left"
@@ -329,10 +329,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:hint="  ভাইয়ের স্ত্রীর নাম*"
+                    android:hint="ভাইয়ের স্ত্রীর নাম*"
                     android:padding="10dp"
                     android:singleLine="true"
                     android:textColor="@color/black"
@@ -343,7 +343,7 @@
                     android:id="@+id/professonal_status_brother_spouse"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/white"
@@ -354,7 +354,7 @@
                         android:id="@+id/profession_text_view_brother_spouse"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginLeft="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_weight="1"
                         android:gravity="left"
@@ -379,7 +379,7 @@
                     android:id="@+id/professonal_group_status_brother_spouse"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/white"
@@ -390,7 +390,7 @@
                         android:id="@+id/profession_group_text_view_brother_spouse"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginLeft="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_weight="1"
                         android:gravity="left"
@@ -415,7 +415,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/white"
@@ -430,7 +430,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:background="@color/white"
                     android:hint="প্রতিষ্ঠান"
