--- a/app/src/main/res/layout/activity_own_user_profile_layout.xml
+++ b/app/src/main/res/layout/activity_own_user_profile_layout.xml
@@ -384,17 +384,33 @@
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_margin="5dp"
-                            android:visibility="visible"
-                            android:layout_gravity="top|right"/>
-
-                        <ImageView
-                            android:id="@+id/img_accept"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:layout_margin="5dp"
-                            android:src="@drawable/accept_icon"
                             android:visibility="gone"
                             android:layout_gravity="top|right"/>
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="right">
+
+                            <ImageView
+                                android:id="@+id/img_accept"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:layout_margin="2dp"
+                                android:src="@drawable/accept_icon"
+                                android:visibility="gone"
+                                android:layout_alignParentTop="true"
+                                android:layout_gravity="top|right"/>
+                            <ImageView
+                                android:id="@+id/img_edit_cancel"
+                                android:layout_width="21dp"
+                                android:layout_height="21dp"
+                                android:layout_margin="2dp"
+                                android:layout_below="@id/img_accept"
+                                android:layout_alignParentBottom="true"
+                                android:layout_gravity="bottom|right"
+                                android:src="@drawable/remove"
+                                android:visibility="gone"/>
+                        </RelativeLayout>
 
                     </android.support.v7.widget.CardView>
 
@@ -560,7 +576,6 @@
                         android:id="@+id/other_info_cardview"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/medium_margin"
                         android:background="#FFFFFF"
                         >
 
