--- a/app/src/main/res/layout/profile_details_child_item.xml
+++ b/app/src/main/res/layout/profile_details_child_item.xml
@@ -40,14 +40,28 @@
             android:textSize="@dimen/item_textsize"
             android:textStyle="normal"
             android:imeOptions="actionDone"/>
-        <ImageView
-            android:id="@+id/img_edit"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_weight=".5"
-            android:layout_gravity="top|right"
-            android:src="@drawable/accept_icon"
-            android:visibility="invisible"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="right">
+            <ImageView
+                android:id="@+id/img_edit"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_gravity="top|right"
+                android:src="@drawable/accept_icon"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:id="@+id/img_edit_cancel"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="bottom|right"
+                android:src="@drawable/remove"
+                android:visibility="gone"/>
+        </LinearLayout>
     </LinearLayout>
 
 
