Profile image edit Brother, sister data save bug fix Expandable recycler open/close state consistency fix Hijab, job after marriage edit add

--- a/app/src/main/res/layout/activity_registration_user_address_information.xml
+++ b/app/src/main/res/layout/activity_registration_user_address_information.xml
@@ -21,7 +21,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:gravity="left"
             android:padding="@dimen/small_padding">
 
             <ImageView
