Profile image update feature(viewpager update with updated image)

--- a/app/src/main/res/layout/viewpager_item.xml
+++ b/app/src/main/res/layout/viewpager_item.xml
@@ -12,6 +12,8 @@
         android:id="@+id/flag"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:minWidth="80dp"
+        android:minHeight="100dp"
         android:layout_alignParentRight="true"
         android:background="@color/accountrecharge_backGround_color"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
