--- a/app/src/main/res/layout/activity_own_user_profile_layout.xml
+++ b/app/src/main/res/layout/activity_own_user_profile_layout.xml
@@ -427,8 +427,6 @@
                             android:scrollbars="vertical"
                             android:visibility="visible"
                             android:clickable="true"/>
-
-
                     </android.support.v7.widget.CardView>
 
 
@@ -447,8 +445,6 @@
                             android:layout_marginRight="@dimen/small_margin"
                             android:scrollbars="vertical"
                             android:visibility="visible" />
-
-
                     </android.support.v7.widget.CardView>
 
 
@@ -467,8 +463,6 @@
                             android:layout_marginRight="@dimen/small_margin"
                             android:scrollbars="vertical"
                             android:visibility="visible" />
-
-
                     </android.support.v7.widget.CardView>
 
 
@@ -486,8 +480,6 @@
                             android:layout_marginRight="@dimen/small_margin"
                             android:scrollbars="vertical"
                             android:visibility="visible" />
-
-
                     </android.support.v7.widget.CardView>
 
 
@@ -506,8 +498,6 @@
                             android:layout_marginRight="@dimen/small_margin"
                             android:scrollbars="vertical"
                             android:visibility="visible" />
-
-
                     </android.support.v7.widget.CardView>
 
 
@@ -574,6 +564,7 @@
                         android:id="@+id/other_info_cardview"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/medium_margin"
                         android:background="#FFFFFF"
                         >
 
@@ -594,6 +585,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/medium_margin"
+                        android:layout_marginBottom="@dimen/medium_margin"
                         android:background="#FFFFFF">
 
                         <android.support.v7.widget.RecyclerView
