Bangla text change Unnecessary toast message remove Image update add for user with no previous image Messaging bug fixing for users with no previous message

--- a/app/src/main/res/layout/activity_registration_family_info_first_page.xml
+++ b/app/src/main/res/layout/activity_registration_family_info_first_page.xml
@@ -180,7 +180,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:background="@color/white"
-                android:hint="পদবী"
+                android:hint="পদমর্যাদা"
                 android:padding="10dp"
                 android:singleLine="true"
                 android:textColor="@color/black"
@@ -303,7 +303,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:background="@color/white"
-                android:hint="পদবী"
+                android:hint="পদমর্যাদা"
                 android:padding="10dp"
                 android:singleLine="true"
                 android:textColor="@color/black"
