--- a/app/src/main/res/layout/activity_registration_first.xml
+++ b/app/src/main/res/layout/activity_registration_first.xml
@@ -166,6 +166,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/lblFromName"
                 android:inputType="text"
+                android:maxLength="20"
                 android:paddingLeft="10sp"
                 android:privateImeOptions="nm"
                 android:singleLine="true" />
