--- a/app/src/main/res/layout/brother_edit.xml
+++ b/app/src/main/res/layout/brother_edit.xml
@@ -233,7 +233,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:background="@color/white"
-                android:hint="পদবী"
+                android:hint="পদমর্যাদা"
                 android:padding="10dp"
                 android:singleLine="true"
                 android:textColor="@color/black"
@@ -419,7 +419,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/white"
-                    android:hint="পদবী"
+                    android:hint="পদমর্যাদা"
                     android:padding="10dp"
                     android:singleLine="true"
                     android:textColor="@color/black"
