--- a/app/src/main/res/layout/common_user_profile_item.xml
+++ b/app/src/main/res/layout/common_user_profile_item.xml
@@ -52,7 +52,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:layout_weight="1.98"
+                    android:layout_weight="2"
 
                     android:text="User Name"
                     android:textColor="@color/colorPrimary"
@@ -89,6 +89,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="2"
+                    android:maxLines="2"
+                    android:ellipsize="end"
                     android:text="cccccccccccccccccccccccccc"
                     android:textStyle="normal" />
                 <LinearLayout
