--- a/app/src/main/res/layout/activity_facebook_registration_data_input.xml
+++ b/app/src/main/res/layout/activity_facebook_registration_data_input.xml
@@ -223,6 +223,7 @@
                 android:background="@color/white"
                 android:hint="ডিসপ্লে নাম"
                 android:inputType="text"
+                android:maxLength="20"
                 android:paddingLeft="10sp"
                 android:privateImeOptions="nm"
                 android:singleLine="true"
