--- a/app/src/main/res/layout/brother.xml
+++ b/app/src/main/res/layout/brother.xml
@@ -175,7 +175,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:background="@color/white"
-        android:hint="পদবী"
+        android:hint="পদমর্যাদা"
         android:padding="10dp"
         android:singleLine="true"
         android:textColor="@color/black"
@@ -362,7 +362,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
             android:background="@color/white"
-            android:hint="পদবী"
+            android:hint="পদমর্যাদা"
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="@color/black"
