--- a/app/src/main/res/layout/contact_page.xml
+++ b/app/src/main/res/layout/contact_page.xml
@@ -103,7 +103,6 @@
             android:id="@+id/ll_footer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:orientation="vertical"
             android:paddingLeft="10dp">
 
@@ -117,14 +116,35 @@
                 android:textColor="@color/contact_footer"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/help_number"
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/contact_for_helpNumber"
-                android:textColor="@color/contact_footer_text"
-                android:textSize="18dp"
-                android:autoLink="web"/>
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/help_number1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/contact_for_helpNumber1"
+                    android:textColor="@color/contact_footer_text"
+                    android:textSize="18dp"
+                    android:autoLink="web"/>
+                <TextView
+                    android:id="@+id/comma"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=", "
+                    android:textColor="@color/black"
+                    android:textSize="18dp"/>
+                <TextView
+                    android:id="@+id/help_number2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/contact_for_helpNumber2"
+                    android:textColor="@color/contact_footer_text"
+                    android:textSize="18dp"
+                    android:autoLink="web"/>
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/time_schedule"
