--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -27,7 +27,7 @@
                     android:title="@string/nav_about_biyeta"/>
                 <item
                     android:id="@+id/nav_connection"
-                    android:title="@string/connection"/>
+                    android:title="@string/contact_title"/>
                 <item
                     android:id="@+id/nav_faq"
                     android:title="@string/nav_faq" />
